# bug-free-guacamole

./: LICENSE  README.md  pyproject.toml
aegismeta/: __init__.py  __main__.py
aegismeta/core/: __init__.py  anomaly.py  case_service.py  extraction_service.py  models.py  rule_engine.py  security.py  timeline.py
aegismeta/infra/: __init__.py  crypto.py  db.py  filesystem.py  logging_utils.py
aegismeta/plugins/: __init__.py  base.py  generic_signature_checker.py  image_exif_extractor.py  pdf_metadata_extractor.py
aegismeta/reports/: __init__.py  hash_manifest.py  html_report.py
aegismeta/tests/: __init__.py
aegismeta/ui/: __init__.py  app.py
tests/: test_anomaly_rule.py  test_db_audit.py  test_hashing.py  test_image_extractor.py  test_integration.py
